<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageMatierePremiere">

    <ImageView
        android:id="@+id/im_page_mp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_du_page_mp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/page_matiere_premiere"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tv_id_mp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produit_id"
        android:textColor="@color/rose_pastel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_message_page_mp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="8dp"
        android:text="@string/information_de_mp"
        android:textColor="@color/brown_organe"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/ib_fermer_page_mp"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/brown_fonce"
        android:contentDescription="@string/image_du_fermer_page_mp"
        android:onClick="act_retour_list_mp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ib_supprimer_mp"
        android:layout_width="185dp"
        android:layout_height="73dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/group_supprimer"
        android:contentDescription="@string/image_du_button_supprimer"
        android:onClick="act_suprimer_mp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />


    <Button
        android:id="@+id/ib_modifier_mp"
        android:layout_width="185dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/group_modifier"
        android:contentDescription="@string/image_du_button_modifier"
        android:onClick="act_modifier_mp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="239dp"
        android:layout_marginTop="110dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ing_id"
                style="@style/DigitTxtStyle120"
                android:layout_width="30dp"
                android:layout_weight="1"
                android:text="@string/nom_mp"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/edt_mp_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nom_de_la_matiere_premiere"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/DigitTxtStyle120"
                android:layout_width="30dp"
                android:layout_weight="1"
                android:text="@string/prix_avec_euros"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/edt_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/prix_de_la_matiere_premiere"
                android:importantForAutofill="no"
                android:inputType="number|numberDecimal"
                android:minHeight="48dp"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_pass"
                style="@style/DigitTxtStyle120"
                android:layout_width="30dp"
                android:layout_weight="1"
                android:text="@string/produit_quantite"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/edt_user_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/quantite_de_la_matiere_premiere"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textSize="18sp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ingredient_unite"
                style="@style/DigitTxtStyle120"
                android:layout_width="30dp"
                android:layout_weight="1"
                android:text="@string/mot_unite"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/edt_ingredient_unite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/unite_de_la_Matiere_Premiere"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp"
                tools:ignore="HardcodedText,TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_user_id_fix"
                style="@style/DigitTxtStyle120"
                android:layout_width="30dp"
                android:layout_weight="1"
                android:text="@string/produit_marque"
                android:textAlignment="textEnd" />

            <EditText
                android:id="@+id/edt_mp_marque"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/marque_de_la_Matiere_Premiere"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textSize="18sp"
                tools:ignore="HardcodedText,TouchTargetSizeCheck,TextContrastCheck,TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_valide_mp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/bouton_ajouter"
        android:onClick="act_ajouterMP"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

</android.support.constraint.ConstraintLayout>