<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageProduit">

    <Button
        android:id="@+id/ib_supprimer_produit"
        android:layout_width="185dp"
        android:layout_height="73dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/group_supprimer"
        android:contentDescription="@string/image_du_button_supprimer"
        android:onClick="act_suprimer_produit"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />


    <Button
        android:id="@+id/ib_modifier"
        android:layout_width="185dp"
        android:layout_height="73dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/group_modifier"
        android:contentDescription="@string/image_du_button_modifier"
        android:onClick="act_modifier_produit"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/ib_fermer_page_produit"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/brown_fonce"
        android:onClick="act_retour_list_produits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/im_page_produit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_du_page_produit"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/page_produit" />

    <ImageView
        android:id="@+id/imaProduit"
        android:layout_width="174dp"
        android:layout_height="313dp"
        android:layout_marginEnd="196dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/image_du_produit"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/a_french_baker_s_guide_to_paris___williams_sonoma_taste" />


    <TextView
        android:id="@+id/tv_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/rose_pastel"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Produit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="644dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:includeFontPadding="false"
        android:text="@string/produit_nom"
        android:textAllCaps="true"
        android:textColor="@color/brown_fonce"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_ingredient"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="100dp"
        android:text="@string/produit_ingredient"
        android:textColor="@color/brown_fonce"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_prix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginTop="424dp"
        android:background="@drawable/carr_prix"
        android:padding="10dp"
        android:text="@string/produit_prix"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quantite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="424dp"
        android:background="@drawable/carr_quantite"
        android:padding="10dp"
        android:text="@string/produit_quantite"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>